@@ -14,6 +14,7 @@ Changelog:
 - [NSF Player] Fixed wrong playlist count (#377).
 - [NSF Player] Improved display of author notes.
 - [FDS] Fixed handling of CRC blocks during QD format image loading (#416).
+- Fix joystick axes input handling: add RELEASED event trigger when needed before new PRESSED events (#415).
 
 0.111
 - Rewritten mappers : All.
